--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
     <header>
         <!-- Photo de profil -->
-        <img src="https://www.example.com/ton-image.jpg" alt="Photo de profil" class="profile-pic">
+        <img src="OIP.jpg" alt="Photo de profil" class="OIP.jpg">
         <h1>Bienvenue sur mon blog</h1>
     </header>
     <div class="container">
