--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Mon Blog Simple - Tous droits réservés</p>
+        <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
 </body>
 </html>
