--- a/index.html
+++ b/index.html
@@ -85,6 +85,44 @@
         a:hover {
             text-decoration: underline;
         }
+
+        /* Nouvelle section pour les commentaires */
+        .comment-section {
+            background-color: #ffffff; /* Fond blanc */
+            color: #333333; /* Texte sombre pour contraste */
+            padding: 40px;
+            margin-top: 40px;
+            border-radius: 8px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        }
+        .comment-section h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+        .comment-section textarea {
+            width: 100%;
+            height: 150px;
+            padding: 15px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            resize: vertical;
+            background-color: #f5f5f5;
+        }
+        .comment-section button {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .comment-section button:hover {
+            background-color: #2980b9;
+        }
+
         @media (max-width: 768px) {
             .container {
                 width: 95%;
@@ -107,6 +145,15 @@
             <p>Je fait parti de l'équipe <a href="https://linux-scratcher.fr" target="_blank">linux-scratcher.fr</a>.</p>
         </div>
     </div>
+
+    <!-- Section des commentaires -->
+    <div class="comment-section">
+        <h2>Laissez un commentaire</h2>
+        <textarea placeholder="Écrivez votre commentaire ici..."></textarea>
+        <br>
+        <button>Envoyer le commentaire</button>
+    </div>
+
     <footer>
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
