--- a/index.html
+++ b/index.html
@@ -156,15 +156,13 @@
     </div>
 
     <!-- Section des commentaires -->
-    <div class="comment-section">
-        <h2>Laissez un commentaire</h2>
-        <textarea id="comment" placeholder="Écrivez votre commentaire ici..."></textarea>
-        <br>
-        <button id="submit-comment">Envoyer le commentaire</button>
-
-        <!-- Zone d'utérances pour afficher le commentaire envoyé -->
-        <div id="comment-utterance" class="comment-utterance" style="display: none;"></div>
-    </div>
+ <script src="https://utteranc.es/client.js"
+        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 
     <footer>
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
