--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         /* Position et rotation du texte */
         .angled-text {
             position: absolute;
-            top: 80px; /* Déplacé un peu plus bas */
+            top: 120px; /* Déplacé encore plus bas */
             left: 20px;
             font-size: 18px;
             font-weight: 600;
