--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         /* Position et rotation du texte */
         .angled-text {
             position: absolute;
-            top: 120px; /* Déplacé encore plus bas */
+            top: 180px; /* Déplacé encore plus bas */
             left: 20px;
             font-size: 18px;
             font-weight: 600;
@@ -157,7 +157,7 @@
 </head>
 <body>
     <!-- Texte incliné en haut à gauche -->
-    <div class="angled-text">Met ton discord ou et teams en commentaire</div>
+    <div class="angled-text">Met ton discord ou ton teams en commentaire</div>
 
     <header>
         <!-- Photo de profil -->
