--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
             transform-origin: left top;
             white-space: nowrap;
         }
+        
+        .angled-text-second {
+            position: absolute;
+            top: 210px; /* Décale le texte encore plus bas */
+            left: 20px;
+            font-size: 18px;
+            font-weight: 600;
+            color: #ecf0f1;
+            transform: rotate(-45deg); /* Inclinée à -45 degrés */
+            transform-origin: left top;
+            white-space: nowrap;
+        }
 
         @media (max-width: 768px) {
             .container {
@@ -158,6 +170,7 @@
 <body>
     <!-- Texte incliné en haut à gauche -->
     <div class="angled-text">Met ton discord ou ton teams en commentaire</div>
+    <div class="angled-text-second">en commentaire</div>
 
     <header>
         <!-- Photo de profil -->
@@ -202,3 +215,4 @@
     </script>
 </body>
 </html>
+
