--- a/index.html
+++ b/index.html
@@ -7,210 +7,7 @@
     <title>Bienvenue sur Starkot48e</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #ecf0f1;
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Bande LED multicolore animée autour de la page */
-        .led-strip {
-            position: absolute;
-            background: linear-gradient(90deg, red, yellow, green, cyan, blue, magenta, red);
-            background-size: 300% 100%;
-            animation: led-animation 5s linear infinite;
-            z-index: 10;
-        }
-
-        /* Bande LED agrandie sur chaque côté */
-        .led-strip.top, .led-strip.bottom {
-            height: 20px;  /* Bande LED plus large */
-            width: 100%;
-        }
-
-        .led-strip.left, .led-strip.right {
-            width: 20px;  /* Bande LED plus large */
-            height: 100%;
-        }
-
-        .led-strip.top { top: 0; }
-        .led-strip.bottom { bottom: 0; }
-        .led-strip.left { left: 0; }
-        .led-strip.right { right: 0; }
-
-        /* Animation de défilement des couleurs */
-        @keyframes led-animation {
-            0% { background-position: 0 0; }
-            100% { background-position: -300% 0; }
-        }
-
-        /* Animation des emojis "caca" */
-        @keyframes emoji-fall {
-            0% { transform: translateY(-100px); opacity: 1; }
-            100% { transform: translateY(100vh); opacity: 0; }
-        }
-
-        .emoji {
-            font-size: 30px;
-            position: absolute;
-            top: -50px;
-            animation: emoji-fall 5s linear infinite;
-        }
-
-        /* Styles généraux pour le reste de la page */
-        header {
-            background-color: #1a2327;
-            color: #ecf0f1;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 36px;
-            font-weight: 600;
-        }
-
-        .profile-pic {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            border: 3px solid #fff;
-            object-fit: cover;
-            margin-bottom: 15px;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 30px auto;
-            padding: 0 15px;
-            overflow: hidden;
-        }
-
-        .post {
-            background: #2c3e50;
-            margin: 20px 0;
-            padding: 25px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            transition: all 0.3s ease;
-        }
-
-        .post:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .post h2 {
-            font-size: 28px;
-            color: #ecf0f1;
-        }
-
-        .post p {
-            line-height: 1.8;
-            color: #bdc3c7;
-        }
-
-        footer {
-            background-color: #1a2327;
-            color: #ecf0f1;
-            text-align: center;
-            padding: 15px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            font-size: 14px;
-        }
-
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        /* Section des commentaires */
-        .comment-section {
-            background-color: #ffffff;
-            color: #333333;
-            padding: 40px;
-            margin-top: 40px;
-            border-radius: 8px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .comment-section h2 {
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-
-        .comment-section textarea {
-            width: 100%;
-            height: 150px;
-            padding: 15px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            resize: vertical;
-            background-color: #f5f5f5;
-        }
-
-        .comment-section button {
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .comment-section button:hover {
-            background-color: #2980b9;
-        }
-
-        .comment-utterance {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #ecf0f1;
-            color: #333333;
-            border-radius: 8px;
-            font-size: 16px;
-        }
-
-        .angled-text {
-            position: absolute;
-            top: 180px;
-            left: 20px;
-            font-size: 18px;
-            font-weight: 600;
-            color: #ecf0f1;
-            transform: rotate(-45deg);
-            transform-origin: left top;
-            white-space: nowrap;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                width: 95%;
-            }
-            header h1 {
-                font-size: 28px;
-            }
-        }
+        /* Votre CSS ici */
     </style>
 </head>
 <body>
@@ -233,6 +30,12 @@
     <div class="emoji" style="left: 90%;">💩</div>
     <div class="emoji" style="left: 100%;">💩</div>
 
+    <!-- Ajout de la musique -->
+    <audio autoplay loop>
+        <source src="chemin/vers/votre-musique.mp3" type="audio/mpeg">
+        Votre navigateur ne prend pas en charge la balise audio.
+    </audio>
+
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
         <h1>Bienvenue sur mon blog</h1>
@@ -244,14 +47,6 @@
             <p>Je fais partie de l'équipe <a href="https://linux-scratcher.fr" target="_blank">linux-scratcher.fr</a>.</p>
         </div>
     </div>
-
-    <script src="https://utteranc.es/client.js"
-        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
-        issue-term="pathname"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-    </script>
 
     <footer>
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
