--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             font-size: 30px;
             position: absolute;
             top: -50px;
-            animation: emoji-fall 5s linear infinite;
+            animation: emoji-fall 2s linear infinite; /* Vitesse accélérée en changeant la durée à 2s */
         }
 
         /* Styles généraux pour le reste de la page */
