--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             font-size: 30px;
             position: absolute;
             top: -50px;
-            animation: emoji-fall 2s linear infinite; /* Vitesse accélérée en changeant la durée à 2s */
+            animation: emoji-fall 2s linear infinite;
         }
 
         /* Styles généraux pour le reste de la page */
@@ -222,16 +222,16 @@
     <div class="led-strip right"></div>
 
     <!-- Emojis "Caca" qui tombent du haut vers le bas -->
-    <div class="emoji" style="left: 10%;">💩</div>
-    <div class="emoji" style="left: 20%;">💩</div>
-    <div class="emoji" style="left: 30%;">💩</div>
-    <div class="emoji" style="left: 40%;">💩</div>
-    <div class="emoji" style="left: 50%;">💩</div>
-    <div class="emoji" style="left: 60%;">💩</div>
-    <div class="emoji" style="left: 70%;">💩</div>
-    <div class="emoji" style="left: 80%;">💩</div>
-    <div class="emoji" style="left: 90%;">💩</div>
-    <div class="emoji" style="left: 100%;">💩</div>
+    <div class="emoji" style="left: 10%; top: -50px;">💩</div>
+    <div class="emoji" style="left: 20%; top: -100px;">💩</div>
+    <div class="emoji" style="left: 30%; top: -150px;">💩</div>
+    <div class="emoji" style="left: 40%; top: -200px;">💩</div>
+    <div class="emoji" style="left: 50%; top: -250px;">💩</div>
+    <div class="emoji" style="left: 60%; top: -300px;">💩</div>
+    <div class="emoji" style="left: 70%; top: -350px;">💩</div>
+    <div class="emoji" style="left: 80%; top: -400px;">💩</div>
+    <div class="emoji" style="left: 90%; top: -450px;">💩</div>
+    <div class="emoji" style="left: 100%; top: -500px;">💩</div>
 
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
@@ -259,3 +259,4 @@
 
 </body>
 </html>
+
