--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             overflow: hidden;
         }
 
+        /* Activation du défilement fluide */
+        html {
+            scroll-behavior: smooth;
+        }
+
         /* Bande LED multicolore animée autour de la page */
         .led-strip {
             position: absolute;
@@ -259,4 +264,3 @@
 
 </body>
 </html>
-
