--- a/index.html
+++ b/index.html
@@ -262,5 +262,6 @@
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
 
-</body>
-</html>
+    <script>
+        // Personnalisation de l'événement de la molette de la souris
+
