--- a/index.html
+++ b/index.html
@@ -262,6 +262,5 @@
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
 
-    <script>
-        // Personnalisation de l'événement de la molette de la souris
-
+</body>
+</html>
