--- a/index.html
+++ b/index.html
@@ -305,8 +305,13 @@
     </footer>
 
     <script>
-        let likeCount = 0;
-        let users = [];
+        // Récupérer les données sauvegardées dans le stockage local
+        let likeCount = parseInt(localStorage.getItem('likeCount')) || 0;
+        let users = JSON.parse(localStorage.getItem('users')) || [];
+
+        // Mettre à jour l'affichage au chargement de la page
+        document.getElementById("likeCount").innerText = likeCount;
+        document.getElementById("scrollingNames").innerText = users.join(' 🟦 ');
 
         function increaseLikeCount() {
             let pseudo = document.getElementById('pseudo').value.trim();
@@ -318,9 +323,12 @@
 
                 // Ajouter les pseudos défilants
                 document.getElementById("scrollingNames").innerText = users.join(' 🟦 ');
+
+                // Sauvegarder les nouvelles données dans le stockage local
+                localStorage.setItem('likeCount', likeCount);
+                localStorage.setItem('users', JSON.stringify(users));
             }
         }
     </script>
 </body>
 </html>
-
