--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
             overflow: hidden;
         }
 
-        /* Activation du défilement fluide */
         html {
             scroll-behavior: smooth;
         }
 
-        /* Bande LED multicolore animée autour de la page */
         .led-strip {
             position: absolute;
             background: linear-gradient(90deg, red, yellow, green, cyan, blue, magenta, red);
@@ -31,14 +29,13 @@
             z-index: 10;
         }
 
-        /* Bande LED agrandie sur chaque côté */
         .led-strip.top, .led-strip.bottom {
-            height: 20px;  /* Bande LED plus large */
+            height: 20px;
             width: 100%;
         }
 
         .led-strip.left, .led-strip.right {
-            width: 20px;  /* Bande LED plus large */
+            width: 20px;
             height: 100%;
         }
 
@@ -47,16 +44,9 @@
         .led-strip.left { left: 0; }
         .led-strip.right { right: 0; }
 
-        /* Animation de défilement des couleurs */
         @keyframes led-animation {
             0% { background-position: 0 0; }
             100% { background-position: -300% 0; }
-        }
-
-        /* Animation des emojis "caca" */
-        @keyframes emoji-fall {
-            0% { transform: translateY(-100px); opacity: 1; }
-            100% { transform: translateY(100vh); opacity: 0; }
         }
 
         .emoji {
@@ -66,13 +56,16 @@
             animation: emoji-fall 2s linear infinite;
         }
 
-        /* Styles généraux pour le reste de la page */
+        @keyframes emoji-fall {
+            0% { transform: translateY(-100px); opacity: 1; }
+            100% { transform: translateY(100vh); opacity: 0; }
+        }
+
         header {
             background-color: #1a2327;
             color: #ecf0f1;
             padding: 20px;
             text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -83,7 +76,6 @@
         header h1 {
             margin: 0;
             font-size: 36px;
-            font-weight: 600;
         }
 
         .profile-pic {
@@ -102,9 +94,6 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
-            display: inline-block;
-            margin-left: 20px;
         }
 
         .like-button:hover {
@@ -117,59 +106,6 @@
             font-weight: bold;
         }
 
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 30px auto;
-            padding: 0 15px;
-            overflow: hidden;
-        }
-
-        .post {
-            background: #2c3e50;
-            margin: 20px 0;
-            padding: 25px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            transition: all 0.3s ease;
-        }
-
-        .post:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .post h2 {
-            font-size: 28px;
-            color: #ecf0f1;
-        }
-
-        .post p {
-            line-height: 1.8;
-            color: #bdc3c7;
-        }
-
-        footer {
-            background-color: #1a2327;
-            color: #ecf0f1;
-            text-align: center;
-            padding: 15px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            font-size: 14px;
-        }
-
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        /* Animation des pseudos défilants */
         .scrolling-names {
             position: absolute;
             bottom: 40px;
@@ -178,19 +114,17 @@
             white-space: nowrap;
             font-size: 18px;
             color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             animation: scroll-left 10s linear infinite;
         }
 
         @keyframes scroll-left {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(-100%);
-            }
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
         }
 
-        /* Section des commentaires */
         .comment-section {
             background-color: #ffffff;
             color: #333333;
@@ -198,46 +132,6 @@
             margin-top: 40px;
             border-radius: 8px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .comment-section h2 {
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-
-        .comment-section textarea {
-            width: 100%;
-            height: 150px;
-            padding: 15px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            resize: vertical;
-            background-color: #f5f5f5;
-        }
-
-        .comment-section button {
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .comment-section button:hover {
-            background-color: #2980b9;
-        }
-
-        .comment-utterance {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #ecf0f1;
-            color: #333333;
-            border-radius: 8px;
-            font-size: 16px;
         }
 
         @media (max-width: 768px) {
@@ -252,36 +146,28 @@
 </head>
 <body>
 
-    <!-- Bande LED animée sur chaque côté de la page -->
     <div class="led-strip top"></div>
     <div class="led-strip bottom"></div>
     <div class="led-strip left"></div>
     <div class="led-strip right"></div>
 
-    <!-- Emojis "Caca" qui tombent du haut vers le bas -->
     <div class="emoji" style="left: 10%; top: -50px;">💩</div>
     <div class="emoji" style="left: 20%; top: -100px;">💩</div>
     <div class="emoji" style="left: 30%; top: -150px;">💩</div>
     <div class="emoji" style="left: 40%; top: -200px;">💩</div>
     <div class="emoji" style="left: 50%; top: -250px;">💩</div>
     <div class="emoji" style="left: 60%; top: -300px;">💩</div>
-    <div class="emoji" style="left: 70%; top: -350px;">💩</div>
-    <div class="emoji" style="left: 80%; top: -400px;">💩</div>
-    <div class="emoji" style="left: 90%; top: -450px;">💩</div>
-    <div class="emoji" style="left: 100%; top: -500px;">💩</div>
 
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
         <h1>Bienvenue sur mon blog</h1>
 
-        <!-- Bouton "Pousse bleu" et compteur -->
         <div style="display: flex; align-items: center; margin-top: 10px;">
             <input type="text" id="pseudo" placeholder="Entrez votre pseudo" style="padding: 5px 10px; margin-right: 10px;">
             <button class="like-button" onclick="increaseLikeCount()">Pousse bleu</button>
             <span class="like-count" id="likeCount">0</span>
         </div>
 
-        <!-- Zone pour afficher les pseudos défilants -->
         <div class="scrolling-names" id="scrollingNames"></div>
     </header>
 
@@ -292,24 +178,14 @@
         </div>
     </div>
 
-    <script src="https://utteranc.es/client.js"
-        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
-        issue-term="pathname"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-    </script>
-
     <footer>
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
 
     <script>
-        // Récupérer les données sauvegardées dans le stockage local
         let likeCount = parseInt(localStorage.getItem('likeCount')) || 0;
         let users = JSON.parse(localStorage.getItem('users')) || [];
 
-        // Mettre à jour l'affichage au chargement de la page
         document.getElementById("likeCount").innerText = likeCount;
         document.getElementById("scrollingNames").innerText = users.join(' 🟦 ');
 
@@ -322,11 +198,19 @@
                 document.getElementById("likeCount").innerText = likeCount;
 
                 // Ajouter les pseudos défilants
-                document.getElementById("scrollingNames").innerText = users.join(' 🟦 ');
+                let scrollingNamesElement = document.getElementById("scrollingNames");
+                scrollingNamesElement.innerText = users.join(' 🟦 ');
 
-                // Sauvegarder les nouvelles données dans le stockage local
+                // Sauvegarder dans le stockage local
                 localStorage.setItem('likeCount', likeCount);
                 localStorage.setItem('users', JSON.stringify(users));
+
+                // Faire disparaître les pseudos après un délai
+                setTimeout(() => {
+                    users.shift();  // Retirer le premier pseudo
+                    document.getElementById("scrollingNames").innerText = users.join(' 🟦 ');
+                    localStorage.setItem('users', JSON.stringify(users));
+                }, 5000);  // 5 secondes après l'affichage
             }
         }
     </script>
