--- a/index.html
+++ b/index.html
@@ -279,43 +279,31 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
-
-    <script>
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-
-        const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
-
-        let likeCountRef = database.ref('likeCount');
-
-        // Charger le compteur depuis Firebase
-        likeCountRef.on('value', (snapshot) => {
-            let likeCount = snapshot.val();
-            document.getElementById("likeCount").innerText = likeCount || 0;
-        });
-
-        function increaseLikeCount() {
-            let currentCount = parseInt(document.getElementById("likeCount").innerText);
-            let newCount = currentCount + 1;
-
-            // Mettre à jour le compteur dans Firebase
-            likeCountRef.set(newCount);
-        }
+    <script src="https://utteranc.es/client.js"
+        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
     </script>
 
     <footer>
         <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
+
+    <script>
+        // Chargement du compteur depuis le stockage local
+        let likeCount = localStorage.getItem('likeCount') ? parseInt(localStorage.getItem('likeCount')) : 0;
+        document.getElementById("likeCount").innerText = likeCount;
+
+        function increaseLikeCount() {
+            likeCount++;
+            document.getElementById("likeCount").innerText = likeCount;
+
+            // Sauvegarde du compteur dans le stockage local
+            localStorage.setItem('likeCount', likeCount);
+        }
+    </script>
 </body>
 </html>
 
