--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
         /* Bande LED agrandie sur chaque côté */
         .led-strip.top, .led-strip.bottom {
-            height: 20px;
+            height: 20px;  /* Bande LED plus large */
             width: 100%;
         }
 
         .led-strip.left, .led-strip.right {
-            width: 20px;
+            width: 20px;  /* Bande LED plus large */
             height: 100%;
         }
 
@@ -176,6 +176,68 @@
             text-decoration: underline;
         }
 
+        /* Section des commentaires */
+        .comment-section {
+            background-color: #ffffff;
+            color: #333333;
+            padding: 40px;
+            margin-top: 40px;
+            border-radius: 8px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .comment-section h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        .comment-section textarea {
+            width: 100%;
+            height: 150px;
+            padding: 15px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            resize: vertical;
+            background-color: #f5f5f5;
+        }
+
+        .comment-section button {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .comment-section button:hover {
+            background-color: #2980b9;
+        }
+
+        .comment-utterance {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #ecf0f1;
+            color: #333333;
+            border-radius: 8px;
+            font-size: 16px;
+        }
+
+        .angled-text {
+            position: absolute;
+            top: 180px;
+            left: 20px;
+            font-size: 18px;
+            font-weight: 600;
+            color: #ecf0f1;
+            transform: rotate(-45deg);
+            transform-origin: left top;
+            white-space: nowrap;
+        }
+
         @media (max-width: 768px) {
             .container {
                 width: 95%;
@@ -221,12 +283,6 @@
             <button class="like-button" onclick="increaseLikeCount()">Pousse bleu</button>
             <span class="like-count" id="likeCount">0</span>
         </div>
-
-        <!-- Affichage du nombre d'utilisateurs connectés en temps réel -->
-        <div style="display: flex; align-items: center; margin-top: 10px;">
-            <span class="visit-count" id="usersOnlineCount">0</span>
-            <span>Utilisateurs en ligne actuellement</span>
-        </div>
     </header>
 
     <div class="container">
@@ -236,47 +292,19 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="https://utteranc.es/client.js"
+        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+    </script>
+
+    <footer>
+        <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
+    </footer>
 
     <script>
-        // Config de Firebase
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-
-        // Initialisation de Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        // Fonction pour ajouter un utilisateur en ligne
-        function userConnect() {
-            const userId = "user" + Math.random().toString(36).substr(2, 9);
-            db.ref("onlineUsers/" + userId).set({
-                online: true
-            });
-
-            // Retirer l'utilisateur de la liste quand il se déconnecte
-            window.addEventListener("beforeunload", () => {
-                db.ref("onlineUsers/" + userId).remove();
-            });
-        }
-
-        // Affichage du nombre d'utilisateurs en ligne en temps réel
-        db.ref("onlineUsers").on("value", snapshot => {
-            const usersOnline = snapshot.numChildren();
-            document.getElementById("usersOnlineCount").innerText = usersOnline;
-        });
-
-        // Appel de la fonction lors du chargement de la page
-        userConnect();
-
         // Chargement du compteur de likes depuis le stockage local
         let likeCount = localStorage.getItem('likeCount') ? parseInt(localStorage.getItem('likeCount')) : 0;
         document.getElementById("likeCount").innerText = likeCount;
@@ -297,6 +325,5 @@
     </script>
 </body>
 </html>
-
 
 
