--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     </div>
 
     <!-- Ajout du CAPTCHA Cloudflare (ou reCAPTCHA dans cet exemple) -->
-    <div class="g-recaptcha" data-sitekey="votre_clé_site_recaptcha"></div>
+    <div class="g-recaptcha" data-sitekey="0x4AAAAAABCFw21HJRMIzTGj"></div>
 
     <footer>
         <p>© 2025 Starkot48e | Tous droits réservés.</p>
