--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 
         /* Style spécifique pour le reCAPTCHA */
         .g-recaptcha {
-            margin-top: 20px;
+            display: block;
+            margin: 40px auto;
             text-align: center;
         }
     </style>
@@ -365,3 +366,4 @@
     </script>
 </body>
 </html>
+
