--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/vnd.icon" href="OIP.jpg">
     <title>Bienvenue sur Starkot48e</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -254,61 +253,30 @@
             white-space: nowrap;
         }
 
-        /* Section des VPN gratuits */
-        .vpn-section {
-            background-color: #333333;
-            color: #ecf0f1;
-            padding: 20px;
-            margin-top: 40px;
-            border-radius: 8px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .vpn-section h2 {
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-
-        .vpn-section a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        .vpn-section a:hover {
-            text-decoration: underline;
-        }
-
-        .vpn-section ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        .vpn-section ul li {
-            margin: 10px 0;
-        }
-
-        /* Style spécifique pour le reCAPTCHA */
-        .g-recaptcha {
-            display: block;
-            margin: 40px auto;
-            text-align: center;
-            z-index: 100;
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
+            header h1 {
+                font-size: 28px;
+            }
         }
     </style>
 </head>
 <body>
+
     <!-- Message de vérification Cloudflare -->
     <div class="cf-message">
         <p>Vérification en cours...</p>
         <p>Patientez pendant que nous vérifions votre accès.</p>
     </div>
-    
+
     <!-- Bande LED animée sur chaque côté de la page -->
     <div class="led-strip top"></div>
     <div class="led-strip bottom"></div>
     <div class="led-strip left"></div>
     <div class="led-strip right"></div>
-    
+
     <!-- Emojis "Caca" qui tombent du haut vers le bas -->
     <div class="emoji" style="left: 10%; top: -50px;">💩</div>
     <div class="emoji" style="left: 20%; top: -100px;">💩</div>
@@ -324,10 +292,14 @@
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
         <h1>Bienvenue sur mon blog</h1>
+
+        <!-- Affichage du nombre de personnes qui se sont connectées -->
         <div style="display: flex; align-items: center; margin-top: 10px;">
             <span class="visit-count" id="visitCount">0</span>
             <span>Personnes se sont déjà connectées</span>
         </div>
+
+        <!-- Bouton "Pousse bleu" et compteur -->
         <div style="display: flex; align-items: center; margin-top: 10px;">
             <button class="like-button" onclick="increaseLikeCount()">Pousse bleu</button>
             <span class="like-count" id="likeCount">0</span>
@@ -341,31 +313,42 @@
         </div>
     </div>
 
-    <!-- Ajout du CAPTCHA Cloudflare (ou reCAPTCHA dans cet exemple) -->
-    <div class="g-recaptcha" data-sitekey="0x4AAAAAABCFw21HJRMIzTGj"></div>
+    <script src="https://utteranc.es/client.js"
+        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+    </script>
 
     <footer>
-        <p>© 2025 Starkot48e | Tous droits réservés.</p>
+        <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
     </footer>
 
     <script>
-        let likeCount = 0;
+        // Chargement du compteur de likes depuis le stockage local
+        let likeCount = localStorage.getItem('likeCount') ? parseInt(localStorage.getItem('likeCount')) : 0;
+        document.getElementById("likeCount").innerText = likeCount;
 
         function increaseLikeCount() {
             likeCount++;
-            document.getElementById('likeCount').innerText = likeCount;
+            document.getElementById("likeCount").innerText = likeCount;
+            // Sauvegarde du compteur de likes dans le stockage local
+            localStorage.setItem('likeCount', likeCount);
         }
 
-        let visitCount = 0;
+        // Comptage des visites
+        let visitCount = localStorage.getItem('visitCount') ? parseInt(localStorage.getItem('visitCount')) : 0;
+        visitCount++;
+        document.getElementById("visitCount").innerText = visitCount;
+        // Sauvegarde du compteur de visites dans le stockage local
+        localStorage.setItem('visitCount', visitCount);
 
-        function updateVisitCount() {
-            visitCount++;
-            document.getElementById('visitCount').innerText = visitCount;
-        }
-
-        window.onload = updateVisitCount;
+        // Après un délai, masquer le message de vérification pour simuler la fin de la vérification
+        setTimeout(function() {
+            document.querySelector('.cf-message').style.display = 'none';
+        }, 3000); // 3 secondes de délai pour simuler la vérification
     </script>
 </body>
 </html>
-
 
