--- a/index.html
+++ b/index.html
@@ -450,5 +450,62 @@
         localStorage.setItem('visitCount', visitCount);
         document.getElementById('visitCount').textContent = visitCount;
     </script>
+</header>
+
+    <div id="chatbot">
+        <div id="chatbot-header">Dis-moi ce qui te tient à cœur !</div>
+        <div id="chatbot-messages"></div>
+        <div id="chatbot-input">
+            <input type="text" id="userInput" placeholder="Écris quelque chose...">
+            <button onclick="sendMessage()">Envoyer</button>
+        </div>
+    </div>
+
+    <script>
+        // Fonction de chatbot
+        function sendMessage() {
+            const userInput = document.getElementById('userInput').value;
+            const chatbotMessages = document.getElementById('chatbot-messages');
+
+            if (userInput.trim() !== '') {
+                // Ajouter le message de l'utilisateur
+                const userMessage = document.createElement('div');
+                userMessage.classList.add('message', 'user-message');
+                userMessage.textContent = userInput;
+                chatbotMessages.appendChild(userMessage);
+
+                // Effacer l'input
+                document.getElementById('userInput').value = '';
+
+                // Réponse automatique du chatbot plus empathique et humain
+                setTimeout(() => {
+                    const botMessage = document.createElement('div');
+                    botMessage.classList.add('message', 'bot-message');
+                    botMessage.textContent = getHumanLikeResponse(userInput);
+                    chatbotMessages.appendChild(botMessage);
+                    chatbotMessages.scrollTop = chatbotMessages.scrollHeight; // Faire défiler jusqu'au bas
+                }, 1000);  // Réponse après 1 seconde
+            }
+        }
+
+        // Fonction qui génère des réponses empathiques et humanitaires
+        function getHumanLikeResponse(input) {
+            const responses = [
+                "Oh, je comprends ! Merci de partager cela avec moi. 😊",
+                "C'est vraiment intéressant, tu m'as bien fait réfléchir ! 🤔",
+                "Je suis là pour t'écouter, que puis-je faire pour t'aider ? 💙",
+                "Wow, merci de m'en parler ! C'est super d'avoir une discussion avec toi. 🙏",
+                "Je sens qu'il y a beaucoup de sagesse dans tes paroles. Partage-moi encore plus ! 🌟",
+                "C'est génial d'échanger avec toi ! 😊 Dis-moi en plus si tu veux !",
+                "Tu es important pour moi, merci de partager ton histoire ! 💕",
+                "J'aime beaucoup ce que tu dis ! C'est vraiment beau. 🫶",
+                "Cela me touche profondément. Si tu veux parler plus, je suis là ! 🤗",
+                "Tu as toute mon attention, je suis là pour toi. ❤️"
+            ];
+
+            // Choisir une réponse aléatoire parmi les options
+            return responses[Math.floor(Math.random() * responses.length)];
+        }
+    </script>
 </body>
 </html>
